# PyGoRAG

better-ingest-service-go/: README.md
ingest-service-go/: go.mod  go.sum
ingest-service-go/cmd/: main.go
ingest-service-go/internal/adapters/pdf/: loader.go
ingest-service-go/internal/adapters/qdrant/: repository.go
ingest-service-go/internal/core/domain/: models.go
ingest-service-go/internal/core/ports/: interfaces.go
ingest-service-go/internal/core/services/: ingestion.go
rag-service/: .gitignore  docker-compose.yml  pyproject.toml
rag-service/qdrant_storage/: raft_state.json
rag-service/qdrant_storage/collections/production_data/0/: newest_clocks.json  replica_state.json
rag-service/qdrant_storage/collections/production_data/0/segments/3d67e5a0-1797-44f0-942d-89029917b9f6/: mutable_id_tracker.mappings  mutable_id_tracker.versions
rag-service/qdrant_storage/collections/production_data/0/segments/7f670411-9d6b-4e7b-82f6-7deb90354fbf/: mutable_id_tracker.mappings  mutable_id_tracker.versions
rag-service/qdrant_storage/collections/production_data/0/segments/87541d4f-9bb3-4a82-8a45-6cd9fdaee9cd/: mutable_id_tracker.mappings  mutable_id_tracker.versions
rag-service/qdrant_storage/collections/production_data/0/segments/d2051df4-6741-43f6-b6c1-627d708a4c24/: mutable_id_tracker.mappings  mutable_id_tracker.versions
rag-service/src/: config.py  main.py
rag-service/src/core/: engine.py
rag-service/src/infra/: qdrant_client.py
